[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "fake-useragent==1.5.1",
    "fastapi==0.115.5",
    "httpx[http2]==0.28.0",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.32",
    "slowapi==0.1.9",
    "uvicorn[standard]==0.32.1",
    "yt-dlp==2024.11.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["*"]
